qstring-uneeded-heap-allocations: Improve msvc compat

Now we don't warn when using multi token literals like:
QString s = "foo" "bar";

because MSVC is dumb

BUG: 357966