tests/qstring-uneeded-heap-allocations/no-msvc-compat.cpp
@@ -7,3 +7,15 @@ void test()
 {
     QString s = "foo";
 }
+
+void testMultiPartStringLiterals()
+{
+
+    QString s = "foo""bar";
+    s += "foo""bár";
+    s += "foo"
+         "bar"
+         "Test";
+    s = QString::fromLatin1("foo" "bar");
+    s += QString::fromLatin1("foo" "bar");
+}
